--- a/blog/templates/blog/spends-list.html
+++ b/blog/templates/blog/spends-list.html
@@ -16,9 +16,11 @@
 
 </head>
 <body>
+<!-- Шапка -->
     <p class="center">
         <a href="http://127.0.0.1:8000">Вернуться на главную страницу</a>
     </p>
+<!-- Основной вывод списка покупок -->
     <h3>Расходы:</h3>
     <ul>
 	    {% for spend in object_list %}
@@ -32,5 +34,5 @@
 
 </body>
 <!-- Подвал Footer -->
-    <p class="center">HomebrewDev (c) Егор Девятов 2019 г.</p>
+<p class="center">HomebrewDev (c) Егор Девятов 2019 г.</p>
 </html>
