--- a/blog/templates/blog/add_spend.html
+++ b/blog/templates/blog/add_spend.html
@@ -5,12 +5,10 @@
 <meta charset="utf-8">
 
 <style type="text/css">
-
 html, body, h1, form, fieldset, legend, ol, li {
 	margin: 0;
 	padding: 0;
 }
-
 body {
 	background: #ffffff;
 	color: #111111;
@@ -18,8 +16,6 @@ body {
 	padding: 20px;
 	font-size: 14px;
 }
-
-
 input:not([type=checkbox]), textarea {
 	width: 250px;
 	padding: 5px;
@@ -27,30 +23,25 @@ input:not([type=checkbox]), textarea {
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 }
-
-
 form {
 	width: 800px;
 	margin: 0 auto 0 auto;
 }
-
-
 form fieldset {
 	padding: 26px;
 	border: 1px solid #b4b4b4;
 	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
 }
-
 form legend {
 	padding: 5px 20px 5px 20px;
 	color: #030303;
 	-moz-border-radius: 6px;
 	-webkit-border-radius: 6px;
 	border: 3px solid #b4b4b4;
+	position: relative;
 	text-align: center;
 }
-
 form ol {
 	list-style: none;
 	margin-bottom: 20px;
@@ -59,35 +50,28 @@ form ol {
 	-webkit-border-radius: 10px;
 	padding: 10px;
 }
-
 form ol, form legend, form fieldset {
 	background-image: -moz-linear-gradient(top, #f7f7f7, #e5e5e5); /* FF3.6 */
 	background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0, #e5e5e5),color-stop(1, #f7f7f7)); /* Saf4+, Chrome */
 }
-
 form ol.buttons {
 	overflow: auto;
 }
-
 form ol li label {
 	float: left;
 	width: 140px;
 	font-weight: bold;
 }
-
-
 form ol.radio-buttons li {
 	float:left;
     margin-bottom:0;
     width:8px;
 }
-
 form ol.radio-buttons li label {
 	line-height:20px;
     padding-right:20px;
     width:80px;
 }
-
 form ol.radio-buttons li input {
 padding:0;
 width:20px;
@@ -101,9 +85,28 @@ input[type=text] {
     font-size:16px;
 }
 
+.select {
+    background: transparent;
+    display: block;
+    width: 100%;
+    border: 1px solid #a7a7a7;
+    color: #32353a;
+    font-family: 16/Arial, sans-serif;
+    font-size: 14px;
+    line-height: 1.4;
+    font-weight: normal;
+    padding: 7px 10px 7px 10px;
+    height: 36px;
+    vertical-align: top;
+    outline: 0;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+    appearance: none !important;
+}
+
 .center {
   margin: 0 auto;
-  background: white;
   padding: 0px;
   text-align: center;
 }
@@ -128,7 +131,6 @@ input[type=text] {
 	text-align: center;
 }
 
-
 .check {
 	display: block;
 	width: 20px;
@@ -142,25 +144,19 @@ input[type=text] {
 	top: 0px;
 	left: 0px;
 }
-
-
-
 input[type=checkbox] {
 	display: none;
 }
-
 @-webkit-keyframes labelON {
 	0% {
 		top: 0px;
     	left: 0px;
 	}
-
 	100% {
 		top: 0px;
     	left: 14px;
 	}
 }
-
 input[type=checkbox]:checked + label.check {
 	top: 0px;
 	left: 14px;
@@ -171,19 +167,16 @@ input[type=checkbox]:checked + label.check {
   	-webkit-box-shadow: #244766 -1px 0px 3px;
   	-moz-box-shadow: #244766 -1px 0px 3px;
 }
-
 @-webkit-keyframes labelOFF {
 	0% {
 		top: 0px;
     	left: 16px;
 	}
-
 	100% {
 		top: 0px;
     	left: 0px;
 	}
 }
-
 input[type=checkbox] + label.check {
 	top: 0px;
 	left: 0px;
@@ -194,7 +187,6 @@ input[type=checkbox] + label.check {
   	-webkit-box-shadow: #244766 1px 0px 3px;
   	-moz-box-shadow: #244766 1px 0px 3px;
 }
-
 label.info {
 	position: absolute;
 	color: #000;
@@ -203,13 +195,10 @@ label.info {
 	line-height: 15px;
 	width: 200px;
 }
-
-
 form ol.buttons li {
 	float: right;
 	width: 100px;
 }
-
 input[type=submit] {
 	width: 80px;
 	color: #f3f3f3;
@@ -222,7 +211,6 @@ input[type=submit] {
 	box-shadow: #e3e3e3 0px 2px 5px;
 	border: none;
 }
-
 input[type=reset] {
 	width: 80px;
 	color: #f3f3f3;
@@ -234,24 +222,19 @@ input[type=reset] {
 	-moz-box-shadow: #4e4e4e 0px 2px 5px;
 	box-shadow: #e3e3e3 0px 2px 5px;
 	border: none;
-
 }
-
-
 </style>
 
-
 </head>
-
 <body>
 
 <form id="form-add-spend" method="post">
     {% csrf_token %}
   <fieldset>
-    <legend class="center">Добавить новый расход</legend>
+    <legend align="center">Добавить новый расход</legend>
     <ol>
         <li><label>Категория</label></li>
-        <li><select name="category" autofocus title="Выберите одну из категорий" required>
+        <li><select class="select" name="category" autofocus title="Выберите одну из категорий" required>
             <option value="">Выбери категорию</option>
             <option value="Продукты питания">Продукты питания</option>
             <option value="Связь">Связь</option>
@@ -318,6 +301,6 @@ input[type=reset] {
 
 </body>
 <!-- Подвал Footer -->
-    <p class="center"> HomebrewDev (c) Егор Девятов 2019 г.</p>
+    <p align="center"> HomebrewDev (c) Егор Девятов 2019 г.</p>
 
 </html>
