--- a/blog/templates/static/blog/style-mac.css
+++ b/blog/templates/static/blog/style-mac.css
@@ -1,51 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<title>Учет личных расходов</title>
-<meta charset="utf-8">
-
-<style>
 html, body, h1, form, fieldset, legend, ol, li {
 	margin: 0;
 	padding: 0;
-}
-header, nav {
-  text-align: center;
-  background: white;
-  margin: 20px 0;
-  padding: 10px;
-}
-nav a {
-  text-decoration: none;
-  background: #333;
-  border-radius: 5px;
-  color: white;
-  padding: 3px 8px;
-}
-.center {
-  margin: 0;
-  padding: 16px;
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%)
 }
 body {
 	background: #ffffff;
 	color: #111111;
 	font-family: Helvetica;
 	padding: 20px;
-	font-size: 16px
+	font-size: 14px;
+}
+input:not([type=checkbox]), textarea {
+	width: 250px;
+	padding: 5px;
+	border: 1px solid #ccc;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
 }
 form {
-	width: 50%;
+	width: 75%;
 	margin: 0 auto 0 auto;
-	text-align: center;
-	position: relative;
-	padding: 36px;
-	font-size: 16px
 }
 form fieldset {
 	padding: 26px;
@@ -84,8 +57,8 @@ form ol li label {
 }
 form ol.radio-buttons li {
 	float:left;
-margin-bottom:0;
-width:8px;
+    margin-bottom:0;
+    width:8px;
 }
 form ol.radio-buttons li label {
 	line-height:20px;
@@ -96,10 +69,47 @@ form ol.radio-buttons li input {
 padding:0;
 width:20px;
 }
+
+input[type=text] {
+    width:  75%;
+    height: 15px;
+    padding: 5px 10px 5px 10px;
+    border:1px solid #999;
+    font-size:16px;
+}
+
+.select {
+    background: transparent;
+    display: block;
+    width: 100%;
+    border: 1px solid #a7a7a7;
+    color: #32353a;
+    font-family: 16/Arial, sans-serif;
+    font-size: 14px;
+    line-height: 1.4;
+    font-weight: normal;
+    padding: 7px 10px 7px 10px;
+    height: 36px;
+    vertical-align: top;
+    outline: 0;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+    appearance: none !important;
+}
+
+.center {
+  margin: 0 auto;
+  padding: 0px;
+  text-align: center;
+}
+
 .settings {
+	/* width: 400px; */
 	list-style: none;
 	position: relative;
 }
+
 .settings p {
 	display: block;
 	margin-bottom: 20px;
@@ -109,9 +119,11 @@ width:20px;
 	-moz-border-radius: 6px;
 	border: 1px solid #555555;
 	width: 36px;
-	position: absolute;
+	position: relative;
 	height: 15px;
+	text-align: center;
 }
+
 .check {
 	display: block;
 	width: 20px;
@@ -204,26 +216,3 @@ input[type=reset] {
 	box-shadow: #e3e3e3 0px 2px 5px;
 	border: none;
 }
-</style>
-
-        <!-- <link rel="stylesheet" href="style.css" type="text/css"> -->
-</head>
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <body class="center">
-    <form id="form" method="post">
-        {% csrf_token %}
-        <fieldset>
-            <legend align="center">Учет личных расходов</legend>
-            <ol class="center">
-                <li><a href="http://127.0.0.1:8000/admin">Перейти в админ-панель</a></li>
-                <li><br><a href="http://127.0.0.1:8000/add_spend">Добавить новый расход</a></li>
-                <li><br><a href="http://127.0.0.1:8000/add_category">Добавить новую категорию</a></li>
-                <li><br><a href="http://127.0.0.1:8000/spends-list">Вывести список расходов</a></li>
-                <li><br><a href="http://127.0.0.1:8000/spends-table">Вывести таблицу расходов</a></li>
-            </ol>
-        </fieldset>
-        <!-- Подвал Footer -->
-        <p class="body"> HomebrewDev (c) Егор Девятов 2019 г.</p>
-    </form>
-    </body>
-</html>
